[gd_scene load_steps=8 format=3 uid="uid://bbl0mp62ossrm"]

[ext_resource type="Script" uid="uid://c4up022jel73j" path="res://scenes/StashScene.gd" id="1_hrntj"]
[ext_resource type="Texture2D" uid="uid://cr2guw71lqnyd" path="res://assets/Images/backgrounds/TownScene.png" id="2_uw64h"]
[ext_resource type="Script" uid="uid://41clvjbu24gn" path="res://scripts/PointLight2D.gd" id="3_3np0b"]

[sub_resource type="Environment" id="Environment_75pxa"]
background_mode = 3
tonemap_mode = 3
glow_enabled = true
glow_normalized = true
glow_intensity = 1.27
glow_bloom = 0.15
glow_blend_mode = 0

[sub_resource type="Gradient" id="Gradient_ndj27"]
offsets = PackedFloat32Array(0, 0.663366)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_u466w"]
gradient = SubResource("Gradient_ndj27")
fill_from = Vector2(0.5, 0.25)
fill_to = Vector2(0.5, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_w1ewo"]
gradient = SubResource("Gradient_ndj27")
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="StashScene" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_hrntj")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.501961, 0.423529, 0.423529, 1)
position = Vector2(576, 288)
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_uw64h")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_75pxa")

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
position = Vector2(528, 0)
color = Color(0.541176, 0.541176, 0.541176, 1)
blend_mode = 2

[node name="PointLight2D6" type="PointLight2D" parent="."]
position = Vector2(560, 344)
scale = Vector2(12, 7.16667)
color = Color(0.933333, 0.72549, 0.658824, 1)
energy = 0.74
texture = SubResource("GradientTexture2D_u466w")
texture_scale = 1.5
script = ExtResource("3_3np0b")
min_energy = 0.25
max_energy = 0.75
base_pulse_duration = 4.0
randomness = 0.5

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(808, 64)
color = Color(0.933333, 0.72549, 0.658824, 1)
energy = 1.5
texture = SubResource("GradientTexture2D_w1ewo")
texture_scale = 1.5
script = ExtResource("3_3np0b")

[node name="PointLight2D7" type="PointLight2D" parent="."]
position = Vector2(176, 384)
color = Color(0.933333, 0.72549, 0.658824, 1)
energy = 0.75
texture = SubResource("GradientTexture2D_w1ewo")
texture_scale = 5.35
script = ExtResource("3_3np0b")
min_energy = 0.15
max_energy = 0.75

[node name="PointLight2D8" type="PointLight2D" parent="."]
position = Vector2(968, 360)
color = Color(0.933333, 0.72549, 0.658824, 1)
energy = 0.75
texture = SubResource("GradientTexture2D_w1ewo")
texture_scale = 5.35
script = ExtResource("3_3np0b")
min_energy = 0.15
max_energy = 0.75

[node name="PointLight2D2" type="PointLight2D" parent="."]
position = Vector2(304, -16)
color = Color(0.933333, 0.72549, 0.658824, 1)
energy = 1.5
texture = SubResource("GradientTexture2D_w1ewo")
texture_scale = 1.5
script = ExtResource("3_3np0b")

[node name="PointLight2D3" type="PointLight2D" parent="."]
position = Vector2(896, 176)
color = Color(0.933333, 0.72549, 0.658824, 1)
energy = 0.75
texture = SubResource("GradientTexture2D_w1ewo")
script = ExtResource("3_3np0b")
max_energy = 0.75
base_pulse_duration = 1.5
randomness = 0.4

[node name="PointLight2D4" type="PointLight2D" parent="."]
position = Vector2(552, 88)
color = Color(0.933333, 0.72549, 0.658824, 1)
energy = 0.75
texture = SubResource("GradientTexture2D_w1ewo")
script = ExtResource("3_3np0b")
max_energy = 0.75
base_pulse_duration = 1.5
randomness = 0.3

[node name="PointLight2D5" type="PointLight2D" parent="."]
position = Vector2(640, 144)
color = Color(0.933333, 0.72549, 0.658824, 1)
energy = 0.25
texture = SubResource("GradientTexture2D_w1ewo")
texture_scale = 0.75
script = ExtResource("3_3np0b")
min_energy = 0.25
max_energy = 0.5
base_pulse_duration = 1.0

[node name="InventoryList" type="ItemList" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 32.0
offset_right = 232.0
offset_bottom = 232.0

[node name="StashList" type="ItemList" parent="."]
layout_mode = 0
offset_left = 256.0
offset_top = 32.0
offset_right = 472.0
offset_bottom = 232.0

[node name="MoveToStashButton" type="Button" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 256.0
offset_right = 184.0
offset_bottom = 287.0
text = "Move To Stash"

[node name="MoveToInventoryButton" type="Button" parent="."]
layout_mode = 0
offset_left = 288.0
offset_top = 256.0
offset_right = 441.0
offset_bottom = 287.0
text = "Move To Inventory"

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 224.0
offset_top = 320.0
offset_right = 269.0
offset_bottom = 351.0
text = "Back"
